fixing video on mobile

--- a/postcard-core/styles/postcard.sass
+++ b/postcard-core/styles/postcard.sass
@@ -34,19 +34,6 @@ ul.postcard-gallery
     width: 100%
     display: block
 
-  span.video-indicator
-    text-indent: -9000/$em
-    opacity: 0.8
-    display: block
-    position: absolute
-    top: 10%
-    left: 10%
-    width: 100%
-    height: 100%
-    background-image: url(../img/video-play-button.png)
-    background-repeat: no-repeat
-  //background-size: 100% 100%
-
 ul.postcard-feed
   list-style-type: none !important
   li.postcard-container
@@ -135,6 +122,20 @@ ul.postcard-feed
 
   img.feed-image
     width: 100%
+
+
+span.video-indicator
+  text-indent: -9000/$em
+  opacity: 0.8
+  display: block
+  position: absolute
+  top: 10/$em
+  left: 10/$em
+  width: 36/$em
+  height: 40/$em
+  z-index: 10
+  background-image: url(../img/video-play-button.png)
+  background-repeat: no-repeat
 
 //
 // Postcard Modal window
